cka/networking/service-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-cluster-ip
spec:
  selector:
    app: my-application
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
