cka/networking/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-pod1-to-pod2
spec:
  podSelector:
    matchLabels:
      app: pod-2
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchExpressions:
          - key: app
            operator: NotIn
            values: [pod-1]
